<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="100">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollCreateAlarmActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/background_title">

                <TextView
                    android:id="@+id/tvTitleAlarmTime"
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_set_time"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvAlarmTime"
                style="@style/TextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/default_time" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/background_title">

                <TextView
                    android:id="@+id/tvTitleDaysOfWeek"
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_days_of_week"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBoxRepeat"
                style="@style/TextCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/repeat" />

            <RelativeLayout
                android:id="@+id/rlDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ToggleButton
                    android:id="@+id/tbWednesday"
                    android:layout_width="@dimen/toggle_button_size"
                    android:layout_height="@dimen/toggle_button_size"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/toggle_we_btn"
                    android:gravity="center_vertical"
                    android:textOff=""
                    android:textOn="" />


                <ToggleButton
                    android:id="@+id/tbThursday"
                    android:layout_width="@dimen/toggle_button_size"
                    android:layout_height="@dimen/toggle_button_size"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/tbWednesday"
                    android:layout_toRightOf="@+id/tbWednesday"
                    android:background="@drawable/toggle_th_btn"
                    android:checked="false"
                    android:textOff=""
                    android:textOn="" />


                <ToggleButton
                    android:id="@+id/tbFriday"
                    android:layout_width="@dimen/toggle_button_size"
                    android:layout_height="@dimen/toggle_button_size"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/tbThursday"
                    android:layout_toRightOf="@+id/tbThursday"
                    android:background="@drawable/toggle_fr_btn"
                    android:textOff=""
                    android:textOn="" />


                <ToggleButton
                    android:id="@+id/tbSaturday"
                    android:layout_width="@dimen/toggle_button_size"
                    android:layout_height="@dimen/toggle_button_size"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/tbFriday"
                    android:layout_toRightOf="@+id/tbFriday"
                    android:background="@drawable/toggle_sa_btn"
                    android:textOff=""
                    android:textOn="" />

                <ToggleButton
                    android:id="@+id/tbTuesday"
                    android:layout_width="@dimen/toggle_button_size"
                    android:layout_height="@dimen/toggle_button_size"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/tbWednesday"
                    android:layout_toStartOf="@+id/tbWednesday"
                    android:background="@drawable/toggle_tu_btn"
                    android:textOff=""
                    android:textOn="" />

                <ToggleButton
                    android:id="@+id/tbMonday"
                    android:layout_width="@dimen/toggle_button_size"
                    android:layout_height="@dimen/toggle_button_size"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/tbTuesday"
                    android:layout_toStartOf="@+id/tbTuesday"
                    android:background="@drawable/toggle_mo_btn"
                    android:textOff=""
                    android:textOn="" />

                <ToggleButton
                    android:id="@+id/tbSunday"
                    android:layout_width="@dimen/toggle_button_size"
                    android:layout_height="@dimen/toggle_button_size"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/tbMonday"
                    android:layout_toStartOf="@+id/tbMonday"
                    android:background="@drawable/toggle_su_btn"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/background_title">

                <TextView
                    android:id="@+id/textViewAlarmType"
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_alarm_type"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="7">

                <CheckBox
                    android:id="@+id/checkBoxSnooze"
                    style="@style/TextCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:checked="false"
                    android:text="@string/snooze" />

                <CheckBox
                    android:id="@+id/checkBoxMath"
                    style="@style/TextCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:checked="true"
                    android:text="@string/math" />
            </LinearLayout>


            <EditText
                android:id="@+id/etAlarmName"
                style="@style/TextEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:maxLines="1"
                android:focusableInTouchMode="true"
                android:hint="@string/alarm_name"
                android:maxLength="20"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:weightSum="2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/background_title">

                <TextView
                    android:id="@+id/textViewSound"
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_sounds_and_music"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioGroup
                    android:id="@+id/rgMusicType"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/rbFile"
                        style="@style/TextRadiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/music_file" />

                    <RadioButton
                        android:id="@+id/rbRadio"
                        style="@style/TextRadiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/internet_radio" />

                    <RadioButton
                        android:id="@+id/rbRingtones"
                        style="@style/TextRadiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/default_ringtones" />
                </RadioGroup>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnMusic"
                        android:layout_width="@dimen/btn_music_icons"
                        android:layout_height="@dimen/btn_music_icons"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_radio"
                        android:onClick="onClickMusic" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="15">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <Button
            android:id="@+id/btnSaveAlarm"
            android:layout_width="@dimen/save_btn_size"
            android:layout_height="@dimen/save_btn_size"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_save" />
    </RelativeLayout>

</LinearLayout>
